--- a/_sass/custom/custom.scss
+++ b/_sass/custom/custom.scss
@@ -1,14 +1,13 @@
 // Icons
 
 .nic {
-  display: inline-block;
-  vertical-align: middle;
+  display: inline-flex;
+  align-items: center;
+  gap: 8px;
 }
 
 .nic img {
-  display: inline-block;
-  vertical-align: middle;
   filter: grayscale(50%) brightness(0.4);
-  width: 100px;
-  height: 100px;
+  width: 20px;
+  height: 20px;
 }
