--- a/_sass/custom/custom.scss
+++ b/_sass/custom/custom.scss
@@ -4,7 +4,7 @@
 .nic {
   display: inline-block;
   vertical-align: middle;
-  background-color: royalblue; /* Sets the color of the icon */
+  background-color: #264caf; /* Sets the color of the icon */
   width: 20px; /* Controls the size */
   height: 20px;
   margin-right: 4px; /* Spacing between icon and text */
