--- a/_sass/custom/custom.scss
+++ b/_sass/custom/custom.scss
@@ -1,6 +1,7 @@
 
 .blue-font {
-    @apply fw-500 text-blue-200;
+  font-weight: 500; /* alt fw-500 */
+  color: #264caf;   /* alt text-blue-200 */
 }
 
 // Icons
