--- a/_includes/footer_custom.html
+++ b/_includes/footer_custom.html
@@ -1,3 +1,5 @@
 <center>
-<p class="text-small text-grey-dk-100 mb-0">Android Netrunner © Fantasy Flight Games (FFG). Netrunner Codex is an unofficial and non-profit fansite, not endorsed by or affiliated with FFG.</p>
+<p class="text-small text-grey-dk-100 mb-0">Android Universe and Netrunner content on this site (text and graphics) is owned and protected by each property's respective rights holders. Imagery on this site is © Fantasy Flight Games and is used solely for informational and educational purposes. Netrunner Codex is an unofficial, non-profit fansite not affiliated with, endorsed by, or sponsored by any of these rights holders. All trademarks, logos, imagery, and related graphics remain the exclusive property of their respective owners.<br>
+Netrunner is a trademark of R. Talsorian Games, Inc. and is licensed by Wizards of the Coast LLC. Android is a trademark and ©2018 Fantasy Flight Games. All rights reserved. ©2018 Wizards.
+</p>
 </center>
