--- a/_includes/nav_footer_custom.html
+++ b/_includes/nav_footer_custom.html
@@ -1,5 +1,6 @@
 <center>
 <footer class="site-footer">
 <a href="https://github.com/NetrunnerCodex/NetrunnerCodex.github.io"><img src="https://custom-icon-badges.demolab.com/badge/Open_Source-Netrunner_Codex-royalblue?style=flat&logo=open-source" alt=""></a>  
+<p class="text-small text-grey-dk-100 mb-0">Unoffical Fansite</p>
 </footer>
 </center>
