--- a/_includes/nav_footer_custom.html
+++ b/_includes/nav_footer_custom.html
@@ -1,6 +1,8 @@
 <center>
 <footer class="site-footer">
-<a href="https://github.com/NetrunnerCodex/NetrunnerCodex.github.io"><img src="https://custom-icon-badges.demolab.com/badge/Open_Source-Netrunner_Codex-royalblue?style=flat&logo=open-source" alt=""></a>  
-<p class="text-small text-grey-dk-100 mb-0">Unofficial Fansite</p>
+<a href="https://github.com/NetrunnerCodex/NetrunnerCodex.github.io">
+  <img src="https://custom-icon-badges.demolab.com/badge/Open_Source-Netrunner_Codex-royalblue?style=flat&logo=open-source" alt="" style="display: block; margin-bottom: 0px;">
+</a>
+<p class="text-small text-grey-dk-100 mb-0" style="margin-top: 0px;">Unofficial Fansite</p>
 </footer>
 </center>
