--- a/_includes/nav_footer_custom.html
+++ b/_includes/nav_footer_custom.html
@@ -3,6 +3,6 @@
 <a href="https://github.com/NetrunnerCodex/NetrunnerCodex.github.io">
   <img src="https://custom-icon-badges.demolab.com/badge/Open_Source-Netrunner_Codex-royalblue?style=flat&logo=open-source" alt="" style="display: block; margin-bottom: 0px;">
 </a>
-<p class="text-blue-dk-200 mb-0 fs-1" style="margin-top: 1px; font-family: Verdana, sans-serif;">Unofficial Fansite</p> 
+<p class="blue-font mb-0 fs-1" style="margin-top: 1px; font-family: Verdana, sans-serif;">Unofficial Fansite</p> 
 </footer>
 </center>
