--- a/_sass/custom/custom.scss
+++ b/_sass/custom/custom.scss
@@ -119,8 +119,8 @@
 /* Text for navigation buttons */
 .nav-item .nav-text {
   font-size: 16px;
-  font-weight: bold;
-  color: #264caf; /* Text color */
+/* font-weight: bold; */
+  color: #d3d3d3; /* Text color */
   white-space: nowrap; /* Prevents text wrapping */
   opacity: 0; /* Hides text by default */
   transition: opacity 0.3s ease; /* Smooth fade-in effect on hover */
