--- a/_sass/custom/custom.scss
+++ b/_sass/custom/custom.scss
@@ -120,7 +120,7 @@
 .nav-item .nav-text {
   font-size: 16px;
 /* font-weight: bold; */
-  color: #d3d3d3; /* Text color */
+  color: #716e76; /* Text color */
   white-space: nowrap; /* Prevents text wrapping */
   opacity: 0; /* Hides text by default */
   transition: opacity 0.3s ease; /* Smooth fade-in effect on hover */
